log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-file
          persistentVolumeClaim:
            claimName: logoutput-claim
      containers:
        - name: file-writer
          image: raihhardv/file-writer
          volumeMounts:
          - name: shared-file
            mountPath: /usr/src/app/files
        - name: file-reader
          image: raihhardv/file-reader
          volumeMounts:
          - name: shared-file
            mountPath: /usr/src/app/files
