log_output/manifests/deployment-greeter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-dep-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v1
  template:
    metadata:
      labels:
        app: greeter
        version: v1
    spec:
      containers:
        - name: greeter
          image: raihhardv/greeter:v1

---

apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-v1
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v1
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-dep-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
    spec:
      containers:
        - name: greeter
          image: raihhardv/greeter:v2

---

apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-v2
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v2
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
