log_output/manifests/deployment-logoutput.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-file
          persistentVolumeClaim:
            claimName: logoutput-claim
        - name: information
          configMap:
            name: logoutput-configmap
            items:
            - key: "information"
              path: "information.txt"
      containers:
        - name: file-writer
          image: PROJECT/FILE_WRITER
          volumeMounts:
          - name: shared-file
            mountPath: /usr/src/app/files
        - name: file-reader
          image: PROJECT/FILE_READER
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
          volumeMounts:
          - name: shared-file
            mountPath: /usr/src/app/files
          - name: information
            mountPath: /usr/src/app/config
            readOnly: true

---

apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector: 
    app: log-output
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
