log_output/manifests/service-pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector: 
    app: pingpong
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
