log_output/manifests/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: greeter-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: app-routes
  namespace: exercises
spec:
  hosts:
  - "*"
  gateways:
  - greeter-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
      - destination:
          host: logoutput-svc
          port:
            number: 80
  - match:
    - uri:
        prefix: /pingpong
    route:
      - destination:
          host: pingpong-svc
          port:
            number: 80
  - match:
    - uri:
        exact: /greeter
    route:
    - destination:
        host: greeter-svc-v1
        port:
          number: 80
      weight: 50
    - destination:
        host: greeter-svc-v2
        port:
          number: 80
      weight: 50
